# payqr

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gui/: app.py  ui.py
src/payqr/: __main__.py  qr.py  templates.py
templates/: config.toml  default.toml
